fix antd form issue on mobile

--- a/src/containers/EditOrderPage/EditOrderPage.module.scss
+++ b/src/containers/EditOrderPage/EditOrderPage.module.scss
@@ -1,10 +1,9 @@
 .root {
   padding: 0 16px;
-  margin: 64px 0 16px;
 }
 
 .container {
   width: 768px;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 64px auto 16px;
 }
